objects/BlueBerryEvent__c.object
<CustomObject>
    <fields>
        <fullName>Attendees__c</fullName>
        <label>Attendees</label>
        <summaryForeignKey>BlueBerryEventRegistration__c.BlueBerryEvent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Available_Sessions__c</fullName>
        <label>Available Sessions</label>
        <summaryForeignKey>BlueBerrySession__c.BlueBerryEvent__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>BlueBerryVenue__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Venue</label>
        <referenceTo>BlueBerryVenue__c</referenceTo>
        <relationshipLabel>Venue Details</relationshipLabel>
        <relationshipName>BlueBerryEvents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Capacity__c</fullName>
        <label>Event Capacity</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Due_Date__c</fullName>
        <label>Event Due Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_End_Date__c</fullName>
        <label>Event End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Start_Date__c</fullName>
        <label>Event Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Archived</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sum_of_session_capacity__c</fullName>
        <description>Sum of capacity of all the sessions. Mainly to validate the sum of the sessions to be not greater than Event&apos;s capacity</description>
        <label>Sum of session capacity</label>
        <summarizedField>BlueBerrySession__c.Session_Capacity__c</summarizedField>
        <summaryForeignKey>BlueBerrySession__c.BlueBerryEvent__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>BlueBerryEvent</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BlueBerryEvents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>DuedateShouldbeAppropriate</fullName>
        <active>true</active>
        <description>Registration due date cannot be after start date and cannot be past date as well</description>
        <errorConditionFormula>OR( Event_Due_Date__c &gt; Event_Start_Date__c , Event_Due_Date__c &lt; TODAY() )</errorConditionFormula>
        <errorDisplayField>Event_Due_Date__c</errorDisplayField>
        <errorMessage>Registraion due date cannot be past date or cannot be later than start date of Event</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EndDateComesAfterStartDate</fullName>
        <active>true</active>
        <errorConditionFormula>Event_End_Date__c &lt;= Event_Start_Date__c</errorConditionFormula>
        <errorDisplayField>Event_End_Date__c</errorDisplayField>
        <errorMessage>End Date of Event can be after start date only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EventFull</fullName>
        <active>true</active>
        <description>Error message to display the Event as full</description>
        <errorConditionFormula>Attendees__c &gt; Event_Capacity__c</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Sorry the session is full. Please check for other available session</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>EventsShouldBe2daysOnly</fullName>
        <active>true</active>
        <description>Events should be Max-2 day activity only</description>
        <errorConditionFormula>Event_End_Date__c  -  Event_Start_Date__c &lt;&gt; 1</errorConditionFormula>
        <errorDisplayField>Event_End_Date__c</errorDisplayField>
        <errorMessage>Event cannot be more than 2 day event</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SessionCapacityLessThanEvent</fullName>
        <active>true</active>
        <description>The sum of all the session capacity should not be greater than the Event&apos;s capacity</description>
        <errorConditionFormula>Sum_of_session_capacity__c  &gt;  Event_Capacity__c</errorConditionFormula>
        <errorDisplayField>Event_Capacity__c</errorDisplayField>
        <errorMessage>Sum of all the related session capacity cannot be greater than Event Capacity</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StartDateToBeFutureDate</fullName>
        <active>true</active>
        <description>Start Date to be future date only</description>
        <errorConditionFormula>Event_Start_Date__c &lt;=  TODAY()</errorConditionFormula>
        <errorDisplayField>Event_Start_Date__c</errorDisplayField>
        <errorMessage>Start date should be future date</errorMessage>
    </validationRules>
</CustomObject>